Push query filtering down to traversal graph iterator